[package]
name = "sod"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Eric Thill"]
repository = "https://github.com/thill/sod"
description = "Service Oriented Design"
keywords = ["service", "pattern"]
categories = ["rust-patterns"]
exclude = ["Cargo.lock"]

[dependencies]
async-trait = "0.1.64"
futures = "0.3.26"

[dev-dependencies]
ctrlc = "3.2.5"
