[package]
name = "sod-crossbeam"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Eric Thill"]
repository = "https://github.com/thill/sod"
description = "Service Oriented Design - Crossbeam"
keywords = ["service", "pattern"]
categories = ["rust-patterns"]
exclude = ["Cargo.lock"]

[dependencies]
sod = { workspace = true }
crossbeam = "0.8.2"
