[package]
name = "sod-log"
version = "0.3.4"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Eric Thill"]
repository = "https://github.com/thill/sod"
description = "Service Oriented Design - Log Integrations"
keywords = ["service", "pattern"]
categories = ["rust-patterns"]
exclude = ["Cargo.lock"]

[dependencies]
sod = "0.3.3"
log = "0.4.17"
