[package]
name = "sod-tungstenite"
version = "0.4.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Eric Thill"]
repository = "https://github.com/thill/sod"
description = "Service Oriented Design - Tungstenite"
keywords = ["service", "pattern"]
categories = ["rust-patterns"]
exclude = ["Cargo.lock"]

[dependencies]
sod = "0.4.2"
tungstenite = "0.20.1"

[dev-dependencies]
url = "2.3.1"
