[package]
name = "sod"
version = "0.3.3"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Eric Thill"]
repository = "https://github.com/thill/sod"
description = "Service Oriented Design"
keywords = ["service", "pattern"]
categories = ["rust-patterns"]
exclude = ["Cargo.lock"]

[dependencies]
async-trait = "0.1.64"

[dev-dependencies]
ctrlc = "3.2.5"
futures = "0.3.28"
